Archivos_yaml_kube/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
