Archivos_yaml_kube/03-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-react
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - image: garyjoan14/reactapp
        name: react
        ports:
        - containerPort: 3000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  namespace: frontend
spec:
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
    selector:
        app: react
    type: LoadBalancer
