Archivos_yaml_kube/grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-grpc
  namespace: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gogrpc
  template:
    metadata:
      labels:
        app: gogrpc
    spec:
      containers:
      - image: garyjoan14/gogrpc:1.0.0
        name: go
        ports:
        - containerPort: 8081
      - image: garyjoan14/pythongrpc
        name: pythongrpc
        ports:
        - containerPort: 81
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: gogrpc-svc
  namespace: project
spec:
  ports:
    - protocol: TCP
      port: 8081
  selector:
    app: gogrpc
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: gloo
    name: gloo-ingress
    namespace: project
  spec:
    rules:
     - http:
        paths:
        - path: /.*
          backend:
            serviceName: gogrpc-svc
            servicePort: 8081
