Archivos_yaml_kube/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-rabbit
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gorabbit
  template:
    metadata:
      labels:
        app: gorabbit
    spec:
      containers:
      - image: garyjoan14/gorabbit:1.7
        name: gor
        ports:
        - containerPort: 8082
      - image: garyjoan14/pythonrabbit:1.2
        name: pythonrabbit
        ports:
        - containerPort: 82
      restartPolicy: Always
---

    
apiVersion: v1
kind: Service
metadata:
  name: gorabbit-svc
  namespace: project
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  selector:
    app: gorabbit

---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: nginx-ingress
    namespace: project
  spec:
    rules:
      - http:
          paths:
            - path: /
              backend:
                serviceName: gorabbit-svc
                servicePort: 8082
